--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,51 +1,86 @@
-name: Build and Publish to NPM
+name: Build and Publish to Registries
 
 on:
   release:
     types: [created]
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    outputs:
+      npm_version: ${{ steps.version.outputs.npm_version }}
 
-      - name: Extract version from tag
-        id: version
+    steps:
+      - uses: actions/checkout@v4
+
+      - id: version
         run: |
           VERSION=${GITHUB_REF#refs/tags/}
           VERSION=${VERSION#v}
-          # Remove -dev suffix if present for npm
-          NPM_VERSION=${VERSION%-dev}
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "npm_version=$NPM_VERSION" >> $GITHUB_OUTPUT
-          echo "Version: $VERSION, NPM Version: $NPM_VERSION"
+          echo "npm_version=${VERSION%-dev}" >> $GITHUB_OUTPUT
 
-      - name: Setup Node.js
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - run: |
+          node -e "
+            const fs = require('fs');
+            const pkg = JSON.parse(fs.readFileSync('package.json'));
+            pkg.version = '${{ steps.version.outputs.npm_version }}';
+            fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2) + '\n');
+          "
+
+      - run: npm ci
+      - run: npm run build
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: |
+            dist
+            package.json
+            package-lock.json
+            README.md
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+
+    strategy:
+      matrix:
+        registry: [npm, github]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+
+      - name: Setup Node (npmjs)
+        if: matrix.registry == 'npm'
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
+          node-version: 20
+          registry-url: https://registry.npmjs.org
+          cache: npm
 
-      - name: Update version in package.json
-        run: |
-          # Update version in package.json using node for reliable JSON parsing
-          node -e "const fs = require('fs'); const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8')); pkg.version = '${{ steps.version.outputs.npm_version }}'; fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2) + '\n');"
-          cat package.json | grep '"version"'
+      - name: Setup Node (GitHub Packages)
+        if: matrix.registry == 'github'
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://npm.pkg.github.com
+          scope: "@${{ github.repository_owner }}"
+          cache: npm
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Publish to NPM
+      - name: Publish
         run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
+          NODE_AUTH_TOKEN: ${{ matrix.registry == 'npm' && secrets.NPM_TOKEN || secrets.GITHUB_TOKEN }}
