--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,70 +56,78 @@ jobs:
   publish:
     needs: build
     runs-on: ubuntu-latest
-
+  
     strategy:
       fail-fast: false
       matrix:
         include:
           - name: npm
             registry: https://registry.npmjs.org
-            token: NPM_TOKEN
+            token_env: NPM_TOKEN
             scope: ""
           - name: github
             registry: https://npm.pkg.github.com
-            token: GITHUB_TOKEN
+            token_env: GITHUB_TOKEN
             scope: "@${{ github.repository_owner }}"
-
+  
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
     steps:
       - uses: actions/checkout@v4
-
+  
       - uses: actions/download-artifact@v4
         with:
           name: package
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+  
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: ${{ matrix.registry }}
           scope: ${{ matrix.scope }}
           cache: npm
-
+  
       - name: Publish to ${{ matrix.name }}
-        if: secrets[matrix.token] != ''
+        if: env[matrix.token_env] != ''
         run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets[matrix.token] }}
+          NODE_AUTH_TOKEN: ${{ env[matrix.token_env] }}
 
   notify:
     if: always()
     needs: [build, publish]
     runs-on: ubuntu-latest
-
+  
+    env:
+      TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+      TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+  
     steps:
       - name: Telegram notification
-        if: secrets.TG_BOT_TOKEN != '' && secrets.TG_CHAT_ID != ''
+        if: env.TG_BOT_TOKEN != '' && env.TG_CHAT_ID != ''
         run: |
           STATUS="✅ Success"
           if [[ "${{ needs.build.result }}" != "success" || "${{ needs.publish.result }}" != "success" ]]; then
             STATUS="❌ Failed"
           fi
-
+  
           MESSAGE=$(cat <<EOF
           *CI/CD result*
           Repo: \`${{ github.repository }}\`
           Version: \`${{ needs.build.outputs.version || 'unknown' }}\`
           Status: *$STATUS*
-
+  
           Build: \`${{ needs.build.result }}\`
           Publish: \`${{ needs.publish.result }}\`
-
+  
           Ref: \`${{ github.ref_name }}\`
           Commit: \`${{ github.sha }}\`
           EOF
           )
-
-          curl -s -X POST https://api.telegram.org/bot${{ secrets.TG_BOT_TOKEN }}/sendMessage \
-            -d chat_id=${{ secrets.TG_CHAT_ID }} \
+  
+          curl -s -X POST https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage \
+            -d chat_id=$TG_CHAT_ID \
             -d parse_mode=Markdown \
             --data-urlencode "text=$MESSAGE"
+
