--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: package
+          name: dist
           path: |
             dist
             package.json
@@ -56,7 +56,11 @@ jobs:
   publish:
     needs: build
     runs-on: ubuntu-latest
-  
+    permissions: 
+      contents: read
+      packages: write
+      id-token: write
+      
     strategy:
       fail-fast: false
       matrix:
@@ -79,7 +83,7 @@ jobs:
   
       - uses: actions/download-artifact@v4
         with:
-          name: package
+          name: dist
   
       - uses: actions/setup-node@v4
         with:
